# mcp-google-workspace

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  justfile  policy.example.json  policy.example.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  servicemonitor.yaml
docs/: architecture.md
prompts/: batch-operations.md  create-document.md  create-presentation.md  explore-api.md  generate-image.md  update-section.md  validate-before-execute.md
site/: config.toml
site/content/: _index.md
site/content/docs/: _index.md
site/content/docs/api-reference/: _index.md  http-endpoints.md  mcp-methods.md  tool-arguments.md
site/content/docs/architecture/: _index.md  modules.md  request-flow.md
site/content/docs/configuration/: _index.md  environment-variables.md  policy-reference.md
site/content/docs/deployment/: _index.md  claude-code.md  container.md  guide.md  kubernetes.md
site/content/docs/getting-started/: _index.md  credentials.md  installation.md  quickstart.md
site/content/docs/operations/: _index.md  guide.md  multi-user.md  observability.md
site/content/docs/security/: _index.md  credential-chain.md  model.md  policy-engine.md
site/content/docs/troubleshooting/: _index.md  common-issues.md
site/templates/: base.html
src/: audit.rs  auth.rs  completions.rs  elicitation.rs  execute.rs  format.rs  handler.rs  helpers.rs  http.rs  image_gen.rs  main.rs  marp.rs  meta.rs  metrics.rs  policy.rs  prompts.rs  protocol.rs  resolve.rs  resources.rs  server.rs  slides_helpers.rs  subscriptions.rs  tasks.rs  tools.rs
